--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node app.js",
-        "dev": "nodemon app.js"
+        "dev": "nodemon app.js",
+        "lint": "eslint ."
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
-        "express": "^9.2.0",
+        "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.5.3"
     },
     "devDependencies": {
+        "eslint": "^9.15.0",
         "nodemon": "^3.1.4"
     }
 }
