--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "mongoose": "^8.5.3"
     },
     "devDependencies": {
+        "@eslint/js": "^9.15.0",
         "eslint": "^9.15.0",
+        "globals": "^15.12.0",
         "nodemon": "^3.1.4"
     }
 }
