--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@eslint/js": "^9.15.0",
         "eslint": "^9.15.0",
         "globals": "^15.12.0",
+        "jest": "^29.7.0",
         "nodemon": "^3.1.4"
     }
 }
