--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "start": "node app.js",
         "dev": "nodemon app.js",
-        "lint": "eslint ."
+        "lint": "eslint . --ignore-pattern __tests__/",
+        "coverage": "jest --coverage"
+
     },
     "author": "",
     "license": "ISC",
