--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "dev": "nodemon app.js",
         "lint": "eslint . --ignore-pattern __tests__/",
         "coverage": "jest --coverage"
-
     },
     "author": "",
     "license": "ISC",
@@ -25,6 +24,7 @@
         "eslint": "^9.15.0",
         "globals": "^15.12.0",
         "jest": "^29.7.0",
+        "mongodb-memory-server": "^10.1.2",
         "nodemon": "^3.1.4"
     }
 }
